# slicer-connectomics-toolkit

./: .gitignore  LICENSE  README.md  requirements.txt
docs/: architecture.md  references.md
extension/NeuronSegmenter/: CMakeLists.txt  NeuronSegmenter.py
extension/NeuronSegmenter/NeuronSegmenterLib/: MorphologyUtils.py  SegmentationLogic.py  __init__.py
extension/NeuronSegmenter/Testing/: test_segmentation.py
notebooks/: 01_em_volume_exploration.ipynb  02_neuron_segmentation_pipeline.ipynb  03_morphology_analysis.ipynb
sample_data/: README.md
scripts/: batch_segment_em.py  compute_segment_stats.py  export_neuron_meshes.py  register_to_atlas.py
tutorials/: 01_getting_started.md  02_manual_segmentation.md  03_automated_pipeline.md  04_visualization_and_export.md
